--- a/comicagg/templates/accounts/account.html
+++ b/comicagg/templates/accounts/account.html
@@ -6,7 +6,7 @@
 <h3>{% trans 'Account settings'%}</h3>
 <p class="info">{% trans 'You can review here your settings. Use this page to change your e-mail address or password.'%}</p>
 <h4>{% trans 'Change settings:'%}</h4>
-<form action="{% url accounts:profile_save %}" method="post">
+<form action="{% url accounts:profile_save %}" method="post">{% csrf_token %}
   <p class="info">
     {{ form.alert_new_comics }} {% trans "Alert new comics.<br/>A box will appear in the read page everytime a new comic is added to the database." %}
   </p>
