--- a/comicagg/templates/accounts/email_change_form.html
+++ b/comicagg/templates/accounts/email_change_form.html
@@ -11,7 +11,7 @@
   </ul>
 </div>
 {% endif %}
-<form action="{% url accounts:change_email %}" method="post">
+<form action="{% url accounts:change_email %}" method="post">{% csrf_token %}
   <table>
     <tr {% if form.password.errors %}class="error_tr"{% endif %}>
       <td class="form_div"><label>{% trans 'Current password.'%}</label></td>
