--- a/comicagg/templates/accounts/login_form.html
+++ b/comicagg/templates/accounts/login_form.html
@@ -13,7 +13,7 @@
 	{% endif %}
 	<div class="text_left">
 		<div id="error"></div>
-		<form method="post" action="{% url accounts:login %}" enctype="application/x-www-form-urlencoded">
+		<form method="post" action="{% url accounts:login %}" enctype="application/x-www-form-urlencoded">{% csrf_token %}
 			<table>
 				<tr>
 					<td><label class="small_text">{% trans 'User '%}</label></td>
