--- a/comicagg/templates/accounts/password_change_form.html
+++ b/comicagg/templates/accounts/password_change_form.html
@@ -14,7 +14,7 @@
     </ul>
   </div>
   {% endif %}
-  <form action="{% url accounts:password_change %}" method="post">
+  <form action="{% url accounts:password_change %}" method="post">{% csrf_token %}
     <table style="margin-left:auto;margin-right:auto">
       <tr {% if form.old_password.errors %}class="error_tr"{% endif %}>
         <td><label>{% trans 'Current password'%}</label></td>
